--- a/res/layout/authorpage.xml
+++ b/res/layout/authorpage.xml
@@ -8,14 +8,13 @@
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/listauthors"
             android:layout_width="fill_parent"
             android:layout_height="435dp" >
         </ListView>
