add viewPic func ,add local xml prase func and some bugs fix.

--- a/res/layout/authorpage.xml
+++ b/res/layout/authorpage.xml
@@ -50,8 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="刷新" 
-                android:onClick="refersh"/>
+                android:text="刷新" />
 
         </RelativeLayout>
 
