This is the end of the SHandong University SC contest....so I\'ll remove the Humming function ...and fixed the XML parser to let this app can work as the Really IOS's NewRadio ....That's all..

--- a/res/layout/recordvoice.xml
+++ b/res/layout/recordvoice.xml
@@ -52,6 +52,6 @@
         android:layout_below="@+id/recordbar"
         android:layout_marginRight="16dp"
         android:layout_marginTop="14dp"
-        android:text="TextView" />
+        android:text="已经录制: 0 s" />
 
 </RelativeLayout>
